Style fixes to make the page look better on mobile. Centered buttons. Fixed title for article_display.

--- a/sites/article_display/style.css
+++ b/sites/article_display/style.css
@@ -2,26 +2,33 @@
   text-align: center;
 }
 
+.before {
+  padding: 300px 0;
+}
+
+.after {
+  padding: 50px 0;
+}
+
 #wrapper {
   border: 0;
   height: 100%;
   width: 100%;
-  min-height: 600px;
+  min-height: 500px;
   background-image: url('./mountain.jpeg');
   background-size: cover;
 }
 
 #madlib_holder {
   color: #000;
-  padding: 10px 20px;
+  padding: 150px 15px 15px 15px;
   text-shadow: 1px 1px 2px #fff;
-  line-height: 150%;
-  font-size: 1.7em;
+  line-height: 120%;
+  font-size: 1.55em;
 }
 
 #get_new_article {
   background: rgba(200, 200, 200, 0.5);
-  padding-top: 160px;
   width: 100%;
   height: 100%;
 }
@@ -33,7 +40,8 @@
 @media all and (min-width: 600px) {
 
   #madlib_holder {
-    font-size: 1.5em;
+    padding: 60px 10px 10px 10px;
+    font-size: 1.35em;
   }
 
   #get_new_article {
